[gd_scene load_steps=7 format=2]

[ext_resource path="res://Portal.tscn" type="PackedScene" id=1]
[ext_resource path="res://PortalBullet.tscn" type="PackedScene" id=2]
[ext_resource path="res://TileMap.tscn" type="PackedScene" id=3]
[ext_resource path="res://World.gd" type="Script" id=4]
[ext_resource path="res://Goal.tscn" type="PackedScene" id=5]
[ext_resource path="res://Player.tscn" type="PackedScene" id=6]

[node name="World" type="Node2D"]
z_index = 2
script = ExtResource( 4 )
Bullet = ExtResource( 2 )
Portal = ExtResource( 1 )
bullet_speed = 500.0
teleport_delay = 0.5

[node name="Player" parent="." instance=ExtResource( 6 )]
position = Vector2( -102, 32 )

[node name="TileMap" parent="." instance=ExtResource( 3 )]

[node name="Goal" parent="." instance=ExtResource( 5 )]
position = Vector2( -64, 0 )

[node name="TeleportTimer" type="Timer" parent="."]
[connection signal="shoot" from="Player" to="." method="_on_Player_shoot"]
[connection signal="timeout" from="TeleportTimer" to="." method="_on_TeleportTimer_timeout"]
